Fixing inconsistencies in spacing between components and objects

--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -28,7 +28,7 @@
 
 .aboutDescription {
     text-align: justify;
-    margin-top: 20px;
+    margin-top: 30px;
     color: #F5F5F5;
     max-width: 370px;
     margin-bottom: 20px;
