--- a/src/app/areas/areas.module.css
+++ b/src/app/areas/areas.module.css
@@ -52,9 +52,9 @@
 @media (max-width: 700px) {
     .areasDescription {
         width: 100%;
-        max-width: 301px;
-        margin: 0 auto 20px;
-        margin-top: 20px;
+        max-width: 303px;
+        margin: 0 auto 35px;
+        margin-top: 15px;
         text-align: justify;
     }
 }
